@@ -8,6 +8,15 @@
 
     <packaging>pom</packaging>
 
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
     <profiles>
         <profile>
             <id>standard</id>
@@ -73,6 +82,15 @@
                                     <arg>--add-modules</arg>
                                     <arg>jdk.incubator.vector</arg>
                                 </compilerArgs>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-surefire-plugin</artifactId>
+                            <version>3.0.0-M7</version>
+                            <configuration>
+                                <forkCount>1</forkCount>
+                                <argLine>--add-modules=jdk.incubator.vector</argLine>
                             </configuration>
                         </plugin>
                     </plugins>
